--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -85,7 +85,7 @@
 
         <p class="linebreak">This meant traveling to places. And making places to hide. Then traveling and hiding, again, the next season, when footage from the last shoot was not enough to tell a story.</p>
 
-        <p class="linebreak">The <em>Planet Earth</em> film crew made three separate expeditions to Nepal and Pakistan over the course of two years to capture the first-ever intimate images of a snow leopard struggling to hunt a mountain goat down near-vertical Himalayan slopes. The behind-the-scenes <em>Planet Earth: Diaries</em> featurette for the &lsquo;Mountains&rsquo; episode reveals just how extraordinary the challenges and circumstances were in that region, at that time. Fothergill, in the same telephone interview with the New York Times, spelled out how the <em>Planet Earth</em> team had taken the nature documentary medium beyond <em>Blue Planet</em> (2001), &ldquo;going for emotionally engaging sequences, a very big cinematic score, a pretty minimal narration.&rdquo; And a message &ndash; that there is need to raise awareness for the natural world on the brink of climate catastrophe &ndash; was taking form.<sup>&nbsp;[<a class="button" onclick="fn();" title="Slenske, 2007">3</a>]</sup></p>
+        <p class="linebreak">The <em>Planet Earth</em> film crew made three separate expeditions to Nepal and Pakistan over the course of two years to capture the first-ever intimate images of a snow leopard struggling to hunt a mountain goat down near-vertical Himalayan slopes. The behind-the-scenes <em>Planet Earth: Diaries</em> featurette for the &lsquo;Mountains&rsquo; episode reveals just how extraordinary the challenges and circumstances were in that region, at that time. Fothergill, in the same telephone interview with the New York Times, spelled out how the <em>Planet Earth</em> team had taken the nature documentary medium beyond <em>Blue Planet</em> (2001), &ldquo;going for emotionally engaging sequences, a very big cinematic score, a pretty minimal narration.&rdquo; And a message &ndash; that there is a need to raise awareness for the natural world on the brink of climate catastrophe &ndash; was taking form.<sup>&nbsp;[<a class="button" onclick="fn();" title="Slenske, 2007">3</a>]</sup></p>
 
       </div>
 
@@ -143,7 +143,7 @@
 
         <p class="linebreak">The <em>Planet Earth</em> crew was able to film &ndash; without interruption &ndash; African wild dogs hunting impala in the Okavango delta and Arctic wolves chasing caribou in northern Canada and so on.</p>
 
-        <p class="linebreak">Most hunts seen in wildlife documentary films will actually be a composite of many different hunts, with many different animals, all edited together to tell a story. Instead of cutting together a sequence of impractical tripod set-ups, as creative director Mike Gunton told Vox, "Once that wolf started hunting, you could just fly along, keeping your distance, and in one shot you could see how that drama played out. [&hellip;] It was so gripping because it was unmediated."  This connectness with the story through an unmediated lens &ndash; a window into the wild &ndash; is the big idea for <em>White Elephant</em>.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Fong and Lee, 2017">4</a>]</sup></p>
+        <p class="linebreak">Most hunts seen in wildlife documentary films will actually be a composite of many different hunts, with many different animals, all edited together to tell a story. Instead of cutting together a sequence of impractical tripod set-ups, as creative director Mike Gunton told Vox, "Once that wolf started hunting, you could just fly along, keeping your distance, and in one shot you could see how that drama played out. [&hellip;] It was so gripping because it was unmediated."  This connectedness with the story through an unmediated lens &ndash; a window into the wild &ndash; is the big idea for <em>White Elephant</em>.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Fong and Lee, 2017">4</a>]</sup></p>
 
       </div>
 
@@ -153,7 +153,7 @@
       </div>
 
       <div>
-        <p>For the hunt sequence with African wild dogs, a &lsquo;heli-gimbal&rsquo; camera crew up in the helicopter communicated with ground crews to spot and track the pack. Once the chase was on, the &lsquo;heli-gimbal&rsquo; camera operator still had to focus on the right dog at the right time. And once the &lsquo;heli-gimbal&rsquo; camera was focused and zoomed in, if its on the wrong dog when the pack split, the limited field of view complicated any mid-shot shift in focus. In this case, the &lsquo;heli-gimbal&rsquo; camera crew returned with an incredible sequence of flanking maneuvers, formidable cooperation and, for an impala, an improbable escape. The sequence, from beginning to end, revealed more about African wild dog hunting behavior than any other document before.</p>
+        <p>For the hunt sequence with African wild dogs, a &lsquo;heli-gimbal&rsquo; camera crew up in the helicopter communicated with ground crews to spot and track the pack. Once the chase was on, the &lsquo;heli-gimbal&rsquo; camera operator still had to focus on the right dog at the right time. And once the &lsquo;heli-gimbal&rsquo; camera was focused and zoomed in, if it was pointed at the wrong dog when the pack split, the limited field of view complicated any mid-shot shift in focus. In this case, the &lsquo;heli-gimbal&rsquo; camera crew returned with an incredible sequence of flanking maneuvers, formidable cooperation and, for an impala, an improbable escape. The sequence, from beginning to end, revealed more about African wild dog hunting behavior than any other document before.</p>
 
         <!-- For many shoots, in particular in the caves of Lechuguilla, "this footage is the only way most people can be transported into this magical place." -->
 
@@ -164,7 +164,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We know when we go to the cinema, now, the camera is never static. It is always on the move. It is always on a Steadicam. It is always on tracks. It is always flying. [&hellip;] We wanted to reflect that in our approach, not just because we wanted to pay homage to cinema, but because the reason why cinema does that is because as soon as you have that sense of moving camera. It feels more immersive. It feels more connected.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <em>Planet Earth II</em>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/www/vox-making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>We know when we go to the cinema, now, the camera is never static. It is always on the move. It is always on a Steadicam. It is always [on a track]. It is always flying. [&hellip;] We wanted to reflect that in our approach, not just because we wanted to pay homage to cinema, but because the reason why cinema does that is because as soon as you have that sense of moving camera. It feels more immersive. It feels more connected.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <em>Planet Earth II</em>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/www/vox-making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
 
       </div>
 
@@ -216,7 +216,7 @@
 
       <div> -->
 
-        <p class="linebreak">In India, in particular, the handheld gimbal cameras enabled the <em>Planet Earth II</em> film crew capture a sequence for the beginning of the &lsquo;Cities&rsquo; episode that seems like a chase scene from a Bollywood blockbuster. Langur monkeys leaped from rooftop to rooftop in a battle above the Indian city of Jodhpur. Inured to the bustle of urban living, the monkeys ignored the cameras moving along with the crew within the city. Handheld gimbal cameras made sequences like the macaques in Jaipur and the monkeys in Jodhpur possible.</p>
+        <p class="linebreak">In India, in particular, the handheld gimbal cameras enabled the <em>Planet Earth II</em> film crew to capture a sequence for the beginning of the &lsquo;Cities&rsquo; episode that seems like a chase scene from a Bollywood blockbuster. Langur monkeys leaped from rooftop to rooftop in a battle above the Indian city of Jodhpur. Inured to the bustle of urban living, the monkeys ignored the cameras moving along with the crew within the city. Handheld gimbal cameras made sequences like the macaques in Jaipur and the monkeys in Jodhpur possible.</p>
 
         <p class="linebreak">Also drones.</p>
 
@@ -242,7 +242,7 @@
 
         <!-- invented by Dany Cleyet-Marrel -->
 
-        <p class="linebreak">Technological advancements in drones and in lightweight long lens cameras both converged with gimbal technology in time for the <em>Planet Earth II</em> film crews to capture intimate, cinematic aerial footage, in close, and, in some cases, from new, dramatic perspectives of the planet. The days of hanging out of a helicopter have past. Today, anyone from a film crew or any film school can be anywhere, on land, or on a boat in the ocean, and you can send up a little octocopter &ndash; an eight-bladed drone or remotely operated aerial vehicle (ROAV) &ndash; and have an eye in the sky. This technology is moving so fast that over the course of filming the second set of episodes, drones have shifted from high-technology to the commonplace.</p>
+        <p class="linebreak">Technological advancements in drones and in lightweight long lens cameras both converged with gimbal technology in time for the <em>Planet Earth II</em> film crews to capture intimate, cinematic aerial footage, in close, and, in some cases, from new, dramatic perspectives of the planet. The days of hanging out of a helicopter have passed. Today, anyone from a film crew or any film school can be anywhere, on land, or on a boat in the ocean, and you can send up a little octocopter &ndash; an eight-bladed drone or remotely operated aerial vehicle (ROAV) &ndash; and have an eye in the sky. This technology is moving so fast that over the course of filming the second set of episodes, drones have shifted from high-technology to the commonplace.</p>
 
         <p class="linebreak">Drones were relied upon, in particular, for the &lsquo;Islands&rsquo; episode where there was no access to a helicopter. The wide shots with millions of chinstrap penguins on the volcanic Zavodovski Island were achieved with a drone with a camera with the gimbal technology to stabilize the picture. Most of the sequence of penguins returning from &ndash; and into &ndash; rocky waters was achieved with a drone equipped with a gimbal camera, too.</p>
 
@@ -293,7 +293,7 @@
 
         <!-- Executive producer Mike Gunton and “Islands” episode producer Elizabeth White spoke to IndieWire at the Television Critics Association press tour about how they were able to capture the priceless footage. -->
 
-        <p class="linebreak">Ultimately, the way a wildlife documentary film inspires awe is not just with pictures. It is with storytelling. The visual style of the BBC Studios Natural History Unit has shifted over the decades from more informatic to more cinematic but the the sense of storytelling has remained.</p>
+        <p class="linebreak">Ultimately, the way a wildlife documentary film inspires awe is not just with pictures. It is with storytelling. The visual style of the BBC Studios Natural History Unit has shifted over the decades from more informatic to more cinematic but the sense of storytelling has remained.</p>
 
       </div>
 
