--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="fadein" id="dark">
+<body class="fadein single" id="dark">
 
   <nav>
     <ul class="page">
@@ -49,69 +49,74 @@
 
       </div>
 
-      <div class="clear diptych">
+      <div class="gutter-tobo">
+        <div class="clear diptych">
 
-        <div class="quote">
-          <h5><font class="overscore">Policies</font><font class="fr">&nbsp;&#92;&nbsp;Politiques</font></h5>
-          <ul>
-            <li><a href="../url/-int/cbd/" title="CBD" target="_blank" rel="noopener">Convention on Biological Diversity</a></li>
-            <li><a href="../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Convention on International Trade in Endangered Species</a></li>
-            <li><a href="../url/-org/whc-unesco/" title="UNESCO, 1972" target="_blank" rel="noopener">Convention on Protection of the World Cultural and Natural Heritage</a></li>
-            <li><a href="../url/-org/rsis-ramsar/" title="Ramsar, 1971" target="_blank" rel="noopener">Convention on Wetlands</a></li>
-          </ul>
+          <div>
+            <h5><font class="overscore">Policies</font><font class="fr">&nbsp;&#92;&nbsp;Politiques</font></h5>
+            <ul>
+              <li><a href="../url/-int/cbd/" title="CBD" target="_blank" rel="noopener">Convention on Biological Diversity</a></li>
+              <li><a href="../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Convention on International Trade in Endangered Species</a></li>
+              <li><a href="../url/-org/whc-unesco/" title="UNESCO, 1972" target="_blank" rel="noopener">Convention on Protection of the World Cultural and Natural Heritage</a></li>
+              <li><a href="../url/-org/rsis-ramsar/" title="Ramsar, 1971" target="_blank" rel="noopener">Convention on Wetlands</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <h5><font class="overscore">Societies</font><font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;s</font></h5>
+            <ul>
+              <li><a href="../url/-org/iucn/" title="IUCN" target="_blank" rel="noopener">International Union for Conservation of Nature</a></li>
+              <li><a href="../url/-org/wcs/" title="WCS" target="_blank" rel="noopener">Wildlife Conservation Society</a></li>
+              <li><a href="../url/-org/wildlife/" title="The Wildlife Society" target="_blank" rel="noopener">The Wildlife Society</a></li>
+            </ul>
+          </div>
+
         </div>
-
-        <div class="quote">
-          <h5><font class="overscore">Societies</font><font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;s</font></h5>
-          <ul>
-            <li><a href="../url/-org/iucn/" title="IUCN" target="_blank" rel="noopener">International Union for Conservation of Nature</a></li>
-            <li><a href="../url/-org/wcs/" title="WCS" target="_blank" rel="noopener">Wildlife Conservation Society</a></li>
-            <li><a href="../url/-org/wildlife/" title="The Wildlife Society" target="_blank" rel="noopener">The Wildlife Society</a></li>
-          </ul>
-        </div>
-
       </div>
 
       <div>
         <p>The following is a selection of international wildlife conservation foundations and funds and so on.<font class="fr">&nbsp;&#92;&nbsp;Ce qui suit est une s&eacute;lection de fondations et de fonds internationaux pour la conservation de la nature.</font></p>
       </div>
 
-      <div class="clear diptych">
-        <div class="quote">
-          <h5><font class="overscore">Conservation on Planet Earth</font><font class="fr">&nbsp;&#92;&nbsp;sur la plan&egrave;te Terre</font></h5>
-          <ul>
-            <li><a href="../url/-org/bornfree/" title="Born Free" target="_blank" rel="noopener">Born Free Foundation</a></li>
-            <li><a href="../url/-org/conservation/" title="Conservation International" target="_blank" rel="noopener">Conservation International</a></li>
-            <li><a href="../url/-org/fauna-flora/" title="Fauna and Flora International" target="_blank" rel="noopener">Fauna and Flora International</a></li>
-            <li><a href="../url/-org/ifaw/" title="IFAW" target="_blank" rel="noopener">International Fund for Animal Welfare</a></li>
-            <li><a href="../url/-org/nature/" title="The Nature Conservancy" target="_blank" rel="noopener">The Nature Conservancy</a></li>
-            <li><a href="../url/-org/wildnet/" title="WCN" target="_blank" rel="noopener">Wildlife Conservation Network</a></li>
-            <li><a href="../url/-org/wild/" title="WILD" target="_blank" rel="noopener">The Wild Foundation</a></li>
-            <li><a href="../url/-org/worldwildlife/" title="WWF" target="_blank" rel="noopener">World Wildlife Fund for Nature</a></li>
+      <div class="gutter-tobo">
+        <div class="clear diptych">
+          <div>
+            <h5><font class="overscore">Conservation on Planet Earth</font><font class="fr">&nbsp;&#92;&nbsp;sur la plan&egrave;te Terre</font></h5>
+            <ul>
+              <li><a href="../url/-org/bornfree/" title="Born Free" target="_blank" rel="noopener">Born Free Foundation</a></li>
+              <li><a href="../url/-org/conservation/" title="Conservation International" target="_blank" rel="noopener">Conservation International</a></li>
+              <li><a href="../url/-org/fauna-flora/" title="Fauna and Flora International" target="_blank" rel="noopener">Fauna and Flora International</a></li>
+              <li><a href="../url/-org/ifaw/" title="IFAW" target="_blank" rel="noopener">International Fund for Animal Welfare</a></li>
+              <li><a href="../url/-org/nature/" title="The Nature Conservancy" target="_blank" rel="noopener">The Nature Conservancy</a></li>
+              <li><a href="../url/-org/wildnet/" title="WCN" target="_blank" rel="noopener">Wildlife Conservation Network</a></li>
+              <li><a href="../url/-org/wild/" title="WILD" target="_blank" rel="noopener">The Wild Foundation</a></li>
+              <li><a href="../url/-org/worldwildlife/" title="WWF" target="_blank" rel="noopener">World Wildlife Fund for Nature</a></li>
 
-          </ul>
+            </ul>
+          </div>
+
+          <div>
+
+            <h5><font class="overscore">Conservation in Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique</font></h5>
+            <ul>
+              <li><a href="../url/-org/awf/" title="AWF" target="_blank" rel="noopener">African Wildlife Foundation</a></li>
+              <li><a href="../url/-org/elephantconservation/" title="IEF" target="_blank" rel="noopener">International Elephant Foundation</a></li>
+              <li><a href="../url/-org/savetheelephants/" title="STE" target="_blank" rel="noopener">Save the Elephants</a></li>
+              <li><a href="../url/-org/spaceforgiants/" title="Space for Giants" target="_blank" rel="noopener">Space for Giants</a></li>
+
+            </ul>
+
+            <p class="linebreak">More about conservation in <a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">Africa</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation en Afrique.</font></p>
+
+            <!-- <h5 class="linebreak"><font class="overscore">Conservation in North America</font><font class="fr">&nbsp;&#92;&nbsp;en Am&eacute;rique du Nord </font>:</h5>
+
+            <p class="linebreak">More about wildlife conservation in <a href="north-america/" title="Wildlife Conservation in Canada, Mexico and the United States">North America</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation de la nature en Am&eacute;rique du Nord.</font></p> -->
+
+          </div>
+
         </div>
-
-        <div class="quote">
-
-          <h5><font class="overscore">Conservation in Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique</font></h5>
-          <ul>
-            <li><a href="../url/-org/awf/" title="AWF" target="_blank" rel="noopener">African Wildlife Foundation</a></li>
-            <li><a href="../url/-org/elephantconservation/" title="IEF" target="_blank" rel="noopener">International Elephant Foundation</a></li>
-            <li><a href="../url/-org/savetheelephants/" title="STE" target="_blank" rel="noopener">Save the Elephants</a></li>
-            <li><a href="../url/-org/spaceforgiants/" title="Space for Giants" target="_blank" rel="noopener">Space for Giants</a></li>
-
-          </ul>
-
-          <p class="linebreak">More about conservation in <a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">Africa</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation en Afrique.</font></p>
-
-          <!-- <h5 class="linebreak"><font class="overscore">Conservation in North America</font><font class="fr">&nbsp;&#92;&nbsp;en Am&eacute;rique du Nord </font>:</h5>
-
-          <p class="linebreak">More about wildlife conservation in <a href="north-america/" title="Wildlife Conservation in Canada, Mexico and the United States">North America</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation de la nature en Am&eacute;rique du Nord.</font></p> -->
-
-        </div>
-
       </div>
+
     </article><br class="clear">
   </section>
 
@@ -133,7 +138,7 @@
   <footer class="single">
     <div class="quote">
       <p class="small">This list was updated September 2020.<font class="fr">&nbsp;&#92;&nbsp;Cette liste a &eacute;t&eacute; mise &agrave; jour en septembre 2020.</font></p>
-      <p class="linebreak small">Provide details about your wildilfe conservation effort on the ground to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank" rel="noopener">press&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Fournir des d&eacute;tails sur un autre effort de conservation de la nature &agrave; notre attach&eacute; de presse.</font></p>
+      <p class="linebreak small">Provide details about your wildlife conservation effort on the ground to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank" rel="noopener">press&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Fournir des d&eacute;tails sur un autre effort de conservation de la nature &agrave; notre attach&eacute; de presse.</font></p>
 
     </div>
 
