--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
 
       <div class="quote ptych-left">
-        <p class="lineend">Follow what's happening @<a href="url/tw/animathabitat/" title="Twitter / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p>
+        <p class="lineend">Follow what's happening @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
 
