--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -47,6 +47,8 @@
 
         <p class="linebreak"><em>A parable of three blind men, or women, and an elephant. Three people are each touching a different part of an elephant without seeing the elephant. The first person touches the trunk of the elephant, and says, &ldquo;An elephant is like a snake.&rdquo; The second person touches a leg of the elephant, and says, &ldquo;No, an elephant is like a tree.&rdquo; The third person touches the side of the elephant, and says, &ldquo;Incorrect on both accounts, an elephant is like a wall.&rdquo; Each one of them thinks that the two other statements are incorrect, when in fact they are all describing different parts of the same elephant.</em></p>
 
+        <!-- an early Buddhist parable -->
+
         <p class="linebreak"><em>Here we step back to look at the anatomy of an elephant, including notes taken in the making of Ella.</em></p>
 
       </div>
