--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -153,7 +153,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup> Mann, E. M. <a href="../../../url/tw/michaelmann/" title="Twitter / Michael E. Mann" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Mann, E. M. <a href="../../../url/x/michaelmann/" title="X / Michael E. Mann" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>4</sup> Sellers, P. NASA Goddard, 2016. <a href="../../../url/nasa/piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
