--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -51,7 +51,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../the-forest-the-trees/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Forest Behind the Trees /</font></a>
+          <a class="nav-previous" href="../history-of-the-forest-and-the-trees/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Forest Behind the Trees /</font></a>
           <a class="nav-next" href="../the-beginning-of-printing/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Beginning of Printing</font></a>
         </div>
       </div>
