--- a/studium/index.html
+++ b/studium/index.html
@@ -267,7 +267,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Animat Habitat studium is published in part for students of animation, and for the advancement of the craft of creature effects for interactive multimedia and motion pictures. Request a local workshop or studio session @<a href="../url/tw/animathabitat/" title="Twitter / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>.</p>
+      <p class="small">Animat Habitat studium is published in part for students of animation, and for the advancement of the craft of creature effects for interactive multimedia and motion pictures. Request a local workshop or studio session @<a href="../url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>.</p>
 
       <p class="linebreak small">* Curriculum is in development.</p>
     </div>
