--- a/annum/index.html
+++ b/annum/index.html
@@ -25,7 +25,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../societas/" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li>
+      <!-- <li class="crumb dark"><a href="../societas/" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li> -->
       <li class="crumb scene dark"><a><em>Annum</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -36,16 +36,21 @@
 
       <div>
         <h2 class="letterhead">Letters<font class="fr">&nbsp;&#92;&nbsp;Lettres</font></h2>
-        <p class="lineend"><em>The annual letter from the president is addressed to members of Animat Habitat and published as a document of the <a href="../societas/" title="Animat Habitat societ&#257;s.">Member Handbook</a>.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Le lettre annuelle du pr&eacute;sident est adress&eacute;e aux membres de Animat Habitat et publi&eacute;e en tant que document du manuel des membres.</em></font></p>
+        <p class="lineend"><em>The annual letter from the president is addressed to members of Animat Habitat.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Le lettre annuelle du pr&eacute;sident est adress&eacute;e aux membres de Animat Habitat.</em></font></p>
 
-        <p><a href="2022/" title="Animat Habitat annum. 2022.">Annual Address</a> &ndash; 2022<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2021/" title="Animat Habitat annum. 2021.">Annual Address</a> &ndash; 2021<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2020/" title="Animat Habitat annum. 2020.">Annual Address</a> &ndash; 2020<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2019/" title="Animat Habitat annum. 2019.">Annual Address</a> &ndash; 2019<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2018/" title="Animat Habitat annum. 2018.">Annual Address</a> &ndash; 2018<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2017/" title="Animat Habitat annum. 2017.">Annual Address</a> &ndash; 2017<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></p>
-        <p><a href="2016/" title="Animat Habitat annum. 2016.">Inaugural Address</a> &ndash; 2016<font class="fr">&nbsp;&#92;&nbsp;Adresse inaugural</font></p>
-        <p><a href="2015/" title="Animat Habitat annum. 2015.">Corporate Seal</a> &ndash; 2015<font class="fr">&nbsp;&#92;&nbsp;Sceau corporatif</font></p>
+        <ul>
+          <li>Annual Address &ndash; 2023<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2022/" title="Animat Habitat annum. 2022.">Annual Address</a> &ndash; 2022<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2021/" title="Animat Habitat annum. 2021.">Annual Address</a> &ndash; 2021<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2020/" title="Animat Habitat annum. 2020.">Annual Address</a> &ndash; 2020<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2019/" title="Animat Habitat annum. 2019.">Annual Address</a> &ndash; 2019<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2018/" title="Animat Habitat annum. 2018.">Annual Address</a> &ndash; 2018<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2017/" title="Animat Habitat annum. 2017.">Annual Address</a> &ndash; 2017<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
+          <li><a href="2016/" title="Animat Habitat annum. 2016.">Inaugural Address</a> &ndash; 2016<font class="fr">&nbsp;&#92;&nbsp;Adresse inaugural</font></li>
+          <li><a href="2015/" title="Animat Habitat annum. 2015.">Corporate Seal</a> &ndash; 2015<font class="fr">&nbsp;&#92;&nbsp;Sceau corporatif</font></li>
+
+        </ul>
+
       </div>
 
     </article><br class="clear">
