--- a/princeps/index.html
+++ b/princeps/index.html
@@ -45,6 +45,30 @@
 
         <div class="gutter-tobo">
 
+          <h5>2022</h5>
+          <div class="clear diptych">
+            <div class="clear-left clear-top">
+              <p>Thalefang Charles, photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a>.</p>
+              <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
+              <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
+
+            </div>
+
+            <div class="clear-left clear-top">
+              <p>Rolf Steinmann, wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015).</p>
+              <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
+              <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <pre class="thin"></pre>
+
+        <div class="gutter-tobo">
+
           <h5>2021</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
@@ -76,7 +100,7 @@
           <h5>2020</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <p><a href="../url/tw/paulakahumbu/" title="Twitter / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a>, president of Wildlife Direct assumed office in 2007</p>
+              <p><a href="../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a>, president of Wildlife Direct assumed office in 2007</p>
               <p>Recognized for her role in shining a light on wildlife conservation in Kenya.</p>
               <p><font class="fr">Reconnue pour son r&ocirc;le dans la conservation de la nature au Kenya.</font></p>
 
@@ -107,7 +131,7 @@
               <p>Recognized for her progressive leadership in Canada.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
 
-              <!-- <a href="../url/tw/mumilaaqqaqqaq/" title="Twitter / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
+              <!-- <a href="../url/x/mumilaaqqaqqaq/" title="X / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
 
             </div>
 
@@ -130,7 +154,7 @@
           <h5>2018</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <p><a href="../url/tw/debhaalandnm/" title="Twitter / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a>, representative of New Mexico assumed office January 2019.</p>
+              <p><a href="../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a>, representative of New Mexico assumed office January 2019.</p>
               <p>Recognized for her progressive leadership in America.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste en Am&eacute;rique.</font></p>
 
@@ -168,7 +192,7 @@
           <div class="clear diptych">
 
             <div class="clear-left clear-top">
-              <p><a href="../url/tw/meganaleslie/" title="Twitter / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a>, president of WWF Canada assumed office December 2017.</p>
+              <p><a href="../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a>, president of WWF Canada assumed office December 2017.</p>
               <p>Recognized for her environmental advocacy in Canada.</p>
               <p><font class="fr">Reconnue pour sa d&eacute;fense de l'environnement au Canada.</font></p>
 
