--- a/scene/two/tiger-conservation-siberia/index.html
+++ b/scene/two/tiger-conservation-siberia/index.html
@@ -52,7 +52,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../the-second-chapter/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Second Chapter /</font></a>
-          <a class="nav-next" href="../the-forest-the-trees/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Forest Behind the Trees</font></a>
+          <a class="nav-next" href="../history-of-the-forest-and-the-trees/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Forest Behind the Trees</font></a>
         </div>
       </div>
 
