--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -76,7 +76,7 @@
       <p class="gutter-side text-right"><em>Daytripper</em> (2010) Ch&nbsp;1-3 &copy; Fabio Moon, Gabriel Ba</p>
 
       <div>
-        <p>Panels are typically rectangular, historically rigid and repeated as a natural extension of the comic strip format of the newspapers wherein the medium arrived. The most basic panel layout, in which both the shape and size of the panel stay the same, acts to contain the view of the reader, nothing more. The added framing of a single, consistent perspective in a sequence of similar panels is a way to make clear the change in the scene within the panel.</p>
+        <p> ypically rectangular, historically rigid and repeated as a natural extension of the comic strip format of the newspapers wherein the medium arrived. The most basic panel layout, in which both the shape and size of the panel stay the same, acts to contain the view of the reader, nothing more. The added framing of a single, consistent perspective in a sequence of similar panels is a way to make clear the change in the scene within the panel.</p>
 
       </div>
 
@@ -143,11 +143,11 @@
         <p class="linebreak">The onomatopoeia has developed as a special effect in comics, in particular as a result of the picture-like immediacy of short bold words. Lettering and a handwritten script has a capacity to evoke sound with variation in letterforms, as well as a capacity to arrange letters to simulate sounds with words not found in the dictionary. Furthermore, art in comics has a capacity to appropriate the pictorial quality of letters and words. Scott McCloud wrote about the power of the word in comics in his book about making comics, <em>Making Comics: Storytelling Secrets of Comics, Manga and Graphic Novels</em> (2006). McCloud wrote:</p>
 
         <div>
-          <p><b class="color">&ldquo;</b>Words evoke feelings, sensations and abstract concepts[;] they're comics' only traditional link with the warmth and nuance of human life. They offer comics creators the opportunity to compress and expand time, and when words and pictures work interdependently, they can create new ideas and sensations beyond the sum of their parts.<b class="color">&rdquo;</b></p>
+          <p><b class="color">&ldquo;</b>Words evoke feelings, sensations and abstract concepts[.] They are comics' only traditional link with the warmth and nuance of human life. They offer comics creators the opportunity to compress and expand time, and when words and pictures work interdependently, they can create new ideas and sensations beyond the sum of their parts.<b class="color">&rdquo;</b></p>
 
         </div>
 
-        <p>The use of iconography to represent texture and character of sound in comics, even in print, is an attempt to embrace more than its visual medium. The onomatopoeic sound effect can be indicated by size and boldness and so on, by the graphic quality: the shape, line and color of the sound&mdash;the roughness, waviness, sharpness, fuzziness and so on, and by association of font styles and shapes that reference or mimic the source of the sound. McCloud, in his talk in 2005, elaborated on the meaning of this abstraction in comics:</p>
+        <p>The use of shapes and symbols to represent texture of sound in comics, even in print, is an attempt to embrace more than its visual medium. The onomatopoeic sound effect can be indicated by size and boldness and so on, by the graphic quality&mdash;the shape, line and color of the sound&mdash;the roughness, waviness, sharpness, fuzziness and so on, and by association of font styles and shapes that reference or mimic the source of the sound. McCloud, in his talk in 2005, elaborated on the meaning of this abstraction in comics:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>One of the most important things about comics [is] that comics are a visual medium but they try to embrace all the senses within it. So, the different elements of comics like pictures and words, and the different symbols, and everything in between that comics presents are all funneled through the single conduit of vision. So we have things like resemblance, where [&hellip;] something which resembles the physical world can be abstracted in a couple of different directions: abstracted from resemblance but still retaining the complete meaning, or abstracted away from both resemblance and meaning.<b class="color">&rdquo;</b></p>
