--- a/concilium/index.html
+++ b/concilium/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat is a non-profit organization that creates art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est un organisation &agrave; but non-lucratif qui cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
+  <meta name="description" content="Animat Habitat is a non-profit organization founded in 2015.&nbsp;&#92;&nbsp;Animat Habitat est une organisation &agrave; but non-lucratif fond&eacute;e en 2015." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
