--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -45,7 +45,7 @@
       <div>
         <h4 class="letterhead title thin">Earth<font class="fr">&nbsp;&#92;&nbsp;Terre</font></h4>
         <h2>Conservation Research<font class="fr">&nbsp;&#92;&nbsp;Recherche en Conservation</font></h2>
-        <p><em>Conservation is mainly about people, and getting people to work together: first, to identify and to survey the critical habitats upon which endangered species depend so they may be conserved. Here is a selection of international wildlife conservation policies and societies and so on.</em><font class="fr">&nbsp;&#92;&nbsp;<em>La conservation se concerne principalement les peuples et s’agit d’amener les citoyens du monde &agrave; travailler ensemble&nbsp;: d’abord, identifier et surveyer les habitats critiques dont d&eacute;pendent les esp&egrave;ces menac&eacute;es pour pouvoir les conserver. Voici une s&eacute;lection de politiques et de soci&eacute;t&eacute;s internationales de conservation de la nature.</em></font></p>
+        <p><em>Conservation is mainly about people, and getting people to work together: first, to identify and to survey the critical habitats upon which endangered species depend so they may be conserved. Here is a selection of international wildlife conservation policies and societies and so on.</em><font class="fr">&nbsp;&#92;&nbsp;<em>La conservation se concerne principalement les peuples et s’agit d’amener les citoyens du monde &agrave; travailler ensemble&nbsp;: d’abord, identifier et surveyer les habitats critiques dont d&eacute;pendent les esp&egrave;ces en p&eacute;ril pour pouvoir les conserver. Voici une s&eacute;lection de politiques et de soci&eacute;t&eacute;s internationales de conservation de la nature.</em></font></p>
 
       </div>
 
@@ -130,6 +130,8 @@
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">The real problems of our planet are not economic or technical, they are philosophical. The philosophy of unbridled materialism is now being challenged by events. These events speak to us in a language of breakdown, unemployment, pollution and exhaustion.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">Les vrais probl&egrave;mes de notre plan&egrave;te ne sont ni &eacute;conomiques ni techniques, mais plut&ocirc;t philosophiques. La philosophie du mat&eacute;rialisme d&eacute;brid&eacute; est maintenant remise en question par les &eacute;v&eacute;nements. Ces &eacute;v&eacute;nements nous parlent dans une langue de panne, de ch&ocirc;mage, de pollution et d'&eacute;puisement.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;E. F. Schumacher, <em>Small is Beautiful</em> (2010)</font></h4> -->
 
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Conservation is a state of harmony with a friend. You cannot cherrish his right hand and chop off his left.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Aldo Leopold</font><h4> -->
+
+        <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Hey, if you can't sleep, count sheep. Don't count endangered animals, you will run out!</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4> -->
 
       </div>
     </section>
