--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
         </div>
 
-        <div>
+        <div id="register-head">
           <a class="nav-block block-one" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
             <div>
-              <h3 id="register-head"><font class="scene-one">I&nbsp; White Elephant (2024)</font></h3>
+              <h3><font class="scene-one">I&nbsp; White Elephant (2024)</font></h3>
               <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une app compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la nature.</font></p>
             </div>
 
